# python/src/holder/generated/api/default/get_cards.py
@@ -17,6 +17,7 @@ def _get_kwargs(
     project_id: str,
     tag: str | Unset = UNSET,
     view: GetCardsView | Unset = GetCardsView.TREE,
+    after_card_id: str | Unset = UNSET,
     parent_card_id: str | Unset = UNSET,
     order: GetCardsOrder | Unset = UNSET,
     count: bool | Unset = False,
@@ -35,6 +36,8 @@ def _get_kwargs(
         json_view = view.value
 
     params["view"] = json_view
+
+    params["after_card_id"] = after_card_id
 
     params["parent_card_id"] = parent_card_id
 
@@ -102,6 +105,7 @@ def sync_detailed(
     project_id: str,
     tag: str | Unset = UNSET,
     view: GetCardsView | Unset = GetCardsView.TREE,
+    after_card_id: str | Unset = UNSET,
     parent_card_id: str | Unset = UNSET,
     order: GetCardsOrder | Unset = UNSET,
     count: bool | Unset = False,
@@ -114,6 +118,7 @@ def sync_detailed(
         project_id (str):
         tag (str | Unset):
         view (GetCardsView | Unset):  Default: GetCardsView.TREE.
+        after_card_id (str | Unset):
         parent_card_id (str | Unset):
         order (GetCardsOrder | Unset):
         count (bool | Unset):  Default: False.
@@ -132,6 +137,7 @@ def sync_detailed(
         project_id=project_id,
         tag=tag,
         view=view,
+        after_card_id=after_card_id,
         parent_card_id=parent_card_id,
         order=order,
         count=count,
@@ -152,6 +158,7 @@ def sync(
     project_id: str,
     tag: str | Unset = UNSET,
     view: GetCardsView | Unset = GetCardsView.TREE,
+    after_card_id: str | Unset = UNSET,
     parent_card_id: str | Unset = UNSET,
     order: GetCardsOrder | Unset = UNSET,
     count: bool | Unset = False,
@@ -164,6 +171,7 @@ def sync(
         project_id (str):
         tag (str | Unset):
         view (GetCardsView | Unset):  Default: GetCardsView.TREE.
+        after_card_id (str | Unset):
         parent_card_id (str | Unset):
         order (GetCardsOrder | Unset):
         count (bool | Unset):  Default: False.
@@ -183,6 +191,7 @@ def sync(
         project_id=project_id,
         tag=tag,
         view=view,
+        after_card_id=after_card_id,
         parent_card_id=parent_card_id,
         order=order,
         count=count,
@@ -197,6 +206,7 @@ async def asyncio_detailed(
     project_id: str,
     tag: str | Unset = UNSET,
     view: GetCardsView | Unset = GetCardsView.TREE,
+    after_card_id: str | Unset = UNSET,
     parent_card_id: str | Unset = UNSET,
     order: GetCardsOrder | Unset = UNSET,
     count: bool | Unset = False,
@@ -209,6 +219,7 @@ async def asyncio_detailed(
         project_id (str):
         tag (str | Unset):
         view (GetCardsView | Unset):  Default: GetCardsView.TREE.
+        after_card_id (str | Unset):
         parent_card_id (str | Unset):
         order (GetCardsOrder | Unset):
         count (bool | Unset):  Default: False.
@@ -227,6 +238,7 @@ async def asyncio_detailed(
         project_id=project_id,
         tag=tag,
         view=view,
+        after_card_id=after_card_id,
         parent_card_id=parent_card_id,
         order=order,
         count=count,
@@ -245,6 +257,7 @@ async def asyncio(
     project_id: str,
     tag: str | Unset = UNSET,
     view: GetCardsView | Unset = GetCardsView.TREE,
+    after_card_id: str | Unset = UNSET,
     parent_card_id: str | Unset = UNSET,
     order: GetCardsOrder | Unset = UNSET,
     count: bool | Unset = False,
@@ -257,6 +270,7 @@ async def asyncio(
         project_id (str):
         tag (str | Unset):
         view (GetCardsView | Unset):  Default: GetCardsView.TREE.
+        after_card_id (str | Unset):
         parent_card_id (str | Unset):
         order (GetCardsOrder | Unset):
         count (bool | Unset):  Default: False.
@@ -277,6 +291,7 @@ async def asyncio(
             project_id=project_id,
             tag=tag,
             view=view,
+            after_card_id=after_card_id,
             parent_card_id=parent_card_id,
             order=order,
             count=count,
